--- a/home.html
+++ b/home.html
@@ -164,7 +164,7 @@
     <div id="divFooter">
 
         <div id="divLogoFooter">
-            <object data="imgs/inicial/ford.svg" id="fordLogoFooter"></object>
+            <a href="../../home.html"><img src="../../imgs/inicial/ford.svg" id="fordLogoFooter"></img></a>
         </div>
         
         <nav id="navRedesSociais">
