--- a/veiculos/genRanger/genRanger.html
+++ b/veiculos/genRanger/genRanger.html
@@ -6,8 +6,10 @@
     <title>Nova Geração Ranger</title>
     <link rel="stylesheet" href="../cssHeader/body.css">
     <link rel="stylesheet" href="../cssHeader/header.css">
+    <link rel="stylesheet" href="../cssHeader/footer.css">
     <script src="genRanger.js" defer></script>
     <script src="https://kit.fontawesome.com/995dcfb715.js" crossorigin="anonymous"></script>
+    <script src="../script/script.js" defer></script>
 </head>
 <header>
     <div id="divHeader">
@@ -85,7 +87,7 @@
 </header>
 <body>
     <div id="divSlider">
-        <img src="https://www.autoo.com.br/fotos/2022/12/1280_960/ford1_07122022_72713_1280_960.jpg" alt="" id="imgSlider">
+        <img src="imgs/novaGen.jpg" alt="" id="imgSlider">
         <div id="divLocalizarConcessionaria">
             <i class="fa-solid fa-location-dot fa-xl" id="localizar"></i>
         </div>
@@ -127,7 +129,9 @@
                 <h3><li>Alerta de trafego cruzado</li></h3>
             </section>
         </div>
+
     </div>
+
     <div id="veiculoCores">
         <div id="cabecalhoCores">
             <h1 id="textoCores">Cores</h1>
@@ -144,9 +148,11 @@
             <img src="https://www.ford.com.br/content/dam/Ford/website-assets/latam/br/nameplate/2024/nova-ranger/overview/colorizer/limited/colorizer/cinza-moscou/btn-cinza-moscou.png.dam.full.high.png/1687393707722.png" alt="">
         </div>
     </div>
-    <div>
+
+    <div id="maisDetalhes">
         <h1>MAIS DETALHES:</h1>
     </div>
+
     <div id="detalhesVeiculos">
         <div class="cadaDetalhe">
             <img src="https://www.ford.com.br/content/ford/br/pt_br/nova-ranger-content/2024/media-carousels/overview-cards-test-ab/jcr:content/par/mediacarouselitem/image.imgs.full.high.jpg/1694704274482.jpg" alt="">
@@ -157,23 +163,38 @@
         <div class="cadaDetalhe">
             <img src="https://www.ford.com.br/content/ford/br/pt_br/nova-ranger-content/2024/media-carousels/overview-cards-test-ab/jcr:content/par/mediacarouselitem_1528869907/image.imgs.full.high.jpg/1694704540467.jpg" alt="">
             <h1>PERFORMANCE</h1>
-            <h3>A Nova Geração Ford Ranger apresenta visual externo e interno totalmente novos, materializando o DNA Raça Forte.</h3>
+            <h3>O motor 3.0 V6 de 250cv e 600Nm. da Nova Geração Ford Ranger garante um melhor desempenho e eficiência no consumo de combustível.</h3>
         </div>
 
         <div class="cadaDetalhe">
             <img src="https://www.ford.com.br/content/ford/br/pt_br/nova-ranger-content/2024/media-carousels/overview-cards-test-ab/jcr:content/par/mediacarouselitem_601442681/image.imgs.full.high.jpg/1694704605653.jpg" alt="">
             <h1>CONECTIVIDADE</h1>
-            <h3>A Nova Geração Ford Ranger apresenta visual externo e interno totalmente novos, materializando o DNA Raça Forte.</h3>
+            <h3>Trazendo mais conforto ao usuário, o Sync deixa tudo mais dinâmico, com integrações com Waze, Spotify e muitos outros apps.</h3>
         </div>
 
         <div class="cadaDetalhe">
             <img src="https://www.ford.com.br/content/ford/br/pt_br/nova-ranger-content/2024/media-carousels/overview-cards-test-ab/jcr:content/par/mediacarouselitem_274109040/image.imgs.full.high.jpg/1694704627321.jpg" alt="">
             <h1>SEGURANÇA</h1>
-            <h3>A Nova Geração Ford Ranger apresenta visual externo e interno totalmente novos, materializando o DNA Raça Forte.</h3>
+            <h3>Com a Nova Geração Ford Ranger trazemos asseguramos ao usuários viagens e passeios mais tranquilos.</h3>
         </div>
     </div>
 </body>
 <footer>
+    <div id="divFooter">
 
+        <div id="divLogoFooter">
+            <a href="../../home.html"><img src="../../imgs/inicial/ford.svg" id="fordLogoFooter"></img></a>
+        </div>
+        
+        <nav id="navRedesSociais">
+            <h2>Siga a Ford</h2>
+            <a href="https://x.com/ford"><i id="redesSociais" class="fa-brands fa-x-twitter"></i></a>
+            <a href="https://www.youtube.com/user/ford"><i id="redesSociais" class="fa-brands fa-youtube"></i></a>
+            <a href="https://www.facebook.com/ford"><i id="redesSociais" class="fa-brands fa-facebook"></i></a>
+            <a href="https://www.instagram.com/ford/"><i id="redesSociais" class="fa-brands fa-instagram"></i></a>
+            <a href="https://www.tiktok.com/@ford"><i id="redesSociais" class="fa-brands fa-tiktok"></i></a>
+        </nav>
+
+    </div>
 </footer>
 </html>
