favicon nos sites

--- a/tabelaFipe/fipe.html
+++ b/tabelaFipe/fipe.html
@@ -6,6 +6,7 @@
     <title>Ford - Tabela FIPE</title>
     <link rel="stylesheet" href="fipe.css">
     <script src="fipe.js" defer></script>
+    <link rel="shortcut icon" href="../imgs/inicial/faviconFord.webp" type="image/x-icon">
 </head>
 <header>
     <div id="divHeader">
