--- a/cadastro/pagina_login.html
+++ b/cadastro/pagina_login.html
@@ -6,7 +6,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <script src="pagina_login.js" defer></script>
     <link rel="stylesheet" href="pagina_login.css">
-    <!-- <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css"> -->
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css">
+    <link rel="shortcut icon" href="../imgs/inicial/faviconFord.webp" type="image/x-icon">
     <title>Cadastro</title>
 </head>
 
