--- a/home.html
+++ b/home.html
@@ -10,6 +10,7 @@
     <script src="home.js" defer></script>
     <script src="http://localhost:3000/socket.io/socket.io.js" defer></script>
     <script src="chatSuporte/scriptChat.js" defer></script>
+    <link rel="shortcut icon" href="imgs/inicial/faviconFord.webp" type="image/x-icon">
 </head>
 <header>
     <div id="divHeader">
