--- a/login/login.html
+++ b/login/login.html
@@ -6,6 +6,7 @@
     <title>Ford: Login</title>
     <link rel="stylesheet" href="login.css">
     <script src="login.js" defer></script>
+    <link rel="shortcut icon" href="../imgs/inicial/faviconFord.webp" type="image/x-icon">
 </head>
 <body>
     <div id="container">
