--- a/veiculos/genRanger/genRanger.html
+++ b/veiculos/genRanger/genRanger.html
@@ -10,6 +10,7 @@
     <script src="genRanger.js" defer></script>
     <script src="https://kit.fontawesome.com/995dcfb715.js" crossorigin="anonymous"></script>
     <script src="../script/script.js" defer></script>
+    <link rel="shortcut icon" href="../../imgs/inicial/faviconFord.webp" type="image/x-icon">
 </head>
 <header>
     <div id="divHeader">
