redirecionamento Ford Ranger

--- a/home.html
+++ b/home.html
@@ -29,7 +29,8 @@
                     </div>
                     <div id="divVeiculos" >
                             <div class="divCadaItem">
-                                <img src="https://www.ford.com.br/content/dam/Ford/website-assets/latam/br/nameplate/2024/nova-ranger/showroom/fbr-showroom-ranger-p703-v2.png.dam.full.high.png/1691681133806.png" alt="" class="imgVeiculos">
+                                <a href="veiculos/genRanger/genRanger.html">
+                                <img src="https://www.ford.com.br/content/dam/Ford/website-assets/latam/br/nameplate/2024/nova-ranger/showroom/fbr-showroom-ranger-p703-v2.png.dam.full.high.png/1691681133806.png" alt="" class="imgVeiculos"></a>
                                 <h2>Nova Geração Ranger</h2>
                             </div>
 
