mudanca no nome da pasta "veiculos/css"

--- a/veiculos/genRanger/genRanger.html
+++ b/veiculos/genRanger/genRanger.html
@@ -170,13 +170,13 @@
         <div class="cadaDetalhe">
             <img src="https://www.ford.com.br/content/ford/br/pt_br/nova-ranger-content/2024/media-carousels/overview-cards-test-ab/jcr:content/par/mediacarouselitem_601442681/image.imgs.full.high.jpg/1694704605653.jpg" alt="">
             <h1>CONECTIVIDADE</h1>
-            <h3>Trazendo mais conforto ao usuário, o Sync deixa tudo mais dinâmico, com integrações com Waze, Spotify e muitos outros apps.</h3>
+            <h3>Trazendo mais conforto ao usuário, o Sync deixa tudo mais dinâmico, com integrações com o Waze, Spotify e muitos outros apps.</h3>
         </div>
 
         <div class="cadaDetalhe">
             <img src="https://www.ford.com.br/content/ford/br/pt_br/nova-ranger-content/2024/media-carousels/overview-cards-test-ab/jcr:content/par/mediacarouselitem_274109040/image.imgs.full.high.jpg/1694704627321.jpg" alt="">
             <h1>SEGURANÇA</h1>
-            <h3>Com a Nova Geração Ford Ranger trazemos asseguramos ao usuários viagens e passeios mais tranquilos.</h3>
+            <h3>Com a Nova Geração Ford Ranger asseguramos ao usuários viagens e passeios mais tranquilos.</h3>
         </div>
     </div>
 </body>
