assistencia (em desenvolvimento)

--- a/home.html
+++ b/home.html
@@ -57,7 +57,7 @@
                 <div class="dropdownSuporteServicos">
                     <div id="dropdownBotoesSuporteServicos">
                         <button class="botoesSuporteServicos">Assistência 24hs</button>
-                        <button class="botoesSuporteServicos">Tabela Fipe</button>
+                        <a href="tabelaFipe/fipe.html"><button class="botoesSuporteServicos">Tabela Fipe</button></a>
                         <button class="botoesSuporteServicos">Relatar um Problema / FeedBack</button>
                     </div>
                 </div>
