--- a/tabelaFipe/fipe.html
+++ b/tabelaFipe/fipe.html
@@ -11,7 +11,7 @@
 <header>
     <div id="divHeader">
         <div id="divLogo">
-            <img src="../imgs/inicial/ford.svg" alt="" id="logo">
+            <a href="../home.html"><img src="../imgs/inicial/ford.svg" alt="" id="logo"></a>
         </div>
         
     </div>
@@ -19,7 +19,7 @@
 <body>
     <div id="divTotal">
             <div id="divRetornar">
-                <h3 id="botaoVoltar">Voltar ao Inicio</h3>
+                <h3 id="botaoVoltar">Voltar ao Inicio da Página</h3>
             </div>
         <div id="divCentral">
 
