--- a/veiculos/genRanger/genRanger.html
+++ b/veiculos/genRanger/genRanger.html
@@ -4,9 +4,9 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Nova Geração Ranger</title>
-    <link rel="stylesheet" href="../cssHeader/body.css">
-    <link rel="stylesheet" href="../cssHeader/header.css">
-    <link rel="stylesheet" href="../cssHeader/footer.css">
+    <link rel="stylesheet" href="../css/body.css">
+    <link rel="stylesheet" href="../css/header.css">
+    <link rel="stylesheet" href="../css/footer.css">
     <script src="genRanger.js" defer></script>
     <script src="https://kit.fontawesome.com/995dcfb715.js" crossorigin="anonymous"></script>
     <script src="../script/script.js" defer></script>
