--- a/assistencia24hs/assistencia.html
+++ b/assistencia24hs/assistencia.html
@@ -8,6 +8,7 @@
     <link rel="stylesheet" href="css/body.css">
     <link rel="stylesheet" href="css/footer.css">
     <script src="https://kit.fontawesome.com/995dcfb715.js" crossorigin="anonymous"></script>
+    <link rel="shortcut icon" href="../imgs/inicial/ford.svg" type="image/x-icon">
 </head>
 <header>
     <div id="divHeader">
