redirecionamento fipe e assistencia

--- a/home.html
+++ b/home.html
@@ -52,13 +52,12 @@
                 </div>
             </div>
 
-            <div class="dropdownAll" id="dropdownCategoriaServicos" >
+            <div class="dropdownAll" id="dropdownCategoriaServicos">
                 <button class="botoesHeader">Suporte & Serviços</button>
                 <div class="dropdownSuporteServicos">
                     <div id="dropdownBotoesSuporteServicos">
-                        <button class="botoesSuporteServicos">Assistência 24hs</button>
+                        <a href="assistencia24hs/assistencia.html"><button class="botoesSuporteServicos">Assistência 24hs</button></a>
                         <a href="tabelaFipe/fipe.html"><button class="botoesSuporteServicos">Tabela Fipe</button></a>
-                        <button class="botoesSuporteServicos">Relatar um Problema / FeedBack</button>
                     </div>
                 </div>
             </div>
@@ -127,13 +126,13 @@
                     <img src="imgs/inicial/assistencia.webp" alt="">
                     <h1>Assistência 24hs</h1>
                     <h3>Proporcionamos uma assistência de excêlencia ao(s) seu(s) veiculo(s) Ford.</h3>
-                    <button class="botoesServicos">Saiba Mais ></button>
+                    <a href="assistencia24hs/assistencia.html" class="botoesServicos"><button class="botoesServicos">Saiba Mais ></button></a>
                 </div>
                 <div id="divFipe">
                     <img src="imgs/inicial/fipe.webp" alt="">
                     <h1>Tabela Fipe</h1>
                     <h3>Saiba melhor na hora de escolher o seu Ford no Precinho.</h3>
-                    <button class="botoesServicos">Saiba Mais ></button>
+                    <a href="tabelaFipe/fipe.html" class="botoesServicos" ><button class="botoesServicos">Saiba Mais ></button></a>
                 </div>
             </div>
 
