--- a/assistencia24hs/assistencia.html
+++ b/assistencia24hs/assistencia.html
@@ -63,7 +63,7 @@
         </nav>
         
         <div id="divLogo">
-            <img src="../../imgs/inicial/ford.svg" id="fordLogo">
+            <a href="../home.html"><img src="../../imgs/inicial/ford.svg" id="fordLogo"></a>
         </div>
         
 
