--- a/cadastro/pagina_login.html
+++ b/cadastro/pagina_login.html
@@ -6,43 +6,64 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <script src="pagina_login.js" defer></script>
     <link rel="stylesheet" href="pagina_login.css">
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css">
+    <!-- <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css"> -->
     <link rel="shortcut icon" href="../imgs/inicial/faviconFord.webp" type="image/x-icon">
     <title>Cadastro</title>
 </head>
 
 <body>
-    <div id="div_container">
 
-        <div id="div_dados_do_usuario">
+    <div id="background">
 
+        <div id="div_titulo">
             <h2 class="titulo_cadastro">Registro.</h2>
-
-            <label  class="label_titulo" for="nome">Nome*</label>
-            <input id="nome" class="input_login" type="text" required>
-
-            <label class="label_titulo" for="">Sobrenome*</label>
-            <input id="sobrenome" class="input_login" type="text" required>
-
-            <label class="label_titulo" for="">Telefone*</label>
-            <input id="telefone" class="input_login" type="number" maxlength="11" required>
-
-            <label class="label_titulo" for="">E-mail*</label>
-            <input id="email" class="input_login" type="email" required>
-            <span id="emailInvalido">*Insira um e-mail válido.</span>
-
-            <label class="label_titulo" for="">Senha*</label>
-            <input id="senha" class="input_login" type="password"required>
-
-            <label class="label_titulo" for="">Repetir senha*</label required>
-            <input id="repetir_senha" class="input_login" type="password">
-            <span id="senhaInvalida">*As senhas não correspondem.</span>
-
-            <button id="script_button_login" class="button_login">Registrar</button>
-
         </div>
 
+        <div id="container">
+
+            <form id="form">
+
+
+                <div class="form_content">
+                    <label class="label_titulo" for="nome">Seu nome*</label>
+                    <input id="nome" class="input_login" type="text" placeholder="Nome e sobrenome" required>
+                </div>
+
+                <div class="form_content">
+                    <label class="label_titulo" for="nome">Informe seu CEP*</label>
+                    <input id="input_CEP" class="input_login" type="number" placeholder="00000-000" maxlength="8" required>
+                    <div id="localidade_uf">
+                        <input id="input_Localidade" type="text" disabled>
+                        <input id="input_UF" type="text" disabled>
+                    </div>
+                    <span id="cepInvalido" class="avisoErro">*Insira um CEP válido.</span>
+                </div>
+
+                <div class="form_content">
+                    <label class="label_titulo" for="">E-mail*</label>
+                    <input id="email" class="input_login" type="email" placeholder="user@email.com" required>
+                    <span id="emailInvalido" class="avisoErro">*Insira um e-mail válido.</span>
+                </div>
+
+                <div class="form_content">
+                    <label class="label_titulo" for="">Senha*</label>
+                    <input id="senha" class="input_login" type="password" minlength="4" required>
+                    <span class="avisoInfo">Sua senha deve conter no mínimo 4 caracteres.</span>
+                </div>
+
+                <div class="form_content">
+                    <label class="label_titulo" for="">Repetir senha*</label>
+                    <input id="repetir_senha" class="input_login" type="password" minlength="4" required>
+                    <span id="senhaInvalida" class="avisoErro">*As senhas não correspondem.</span>
+                </div>
+
+            </form>
+
+            <button id="botaoRegistrar" class="button_login">Registrar</button>
+
+        </div>
     </div>
+
 
 </body>
 
