categoria dos veiculos no header

--- a/home.html
+++ b/home.html
@@ -27,7 +27,7 @@
                         <button class="botoesVeiculos">Comercial</button>
                         
                     </div>
-                    <div id="divVeiculos" >
+                        <div id="divVeiculos" >
                             <div class="divCadaItem">
                                 <a href="veiculos/genRanger/genRanger.html">
                                 <img src="https://www.ford.com.br/content/dam/Ford/website-assets/latam/br/nameplate/2024/nova-ranger/showroom/fbr-showroom-ranger-p703-v2.png.dam.full.high.png/1691681133806.png" alt="" class="imgVeiculos"></a>
@@ -48,7 +48,7 @@
                                 <img src="https://www.ford.com.br/content/dam/Ford/website-assets/latam/br/nameplate/2024/maverick/models/hybrid/fbr-showroom-maverick%20hibrida.jpg.dam.full.high.jpg/1712867691940.jpg" alt="" class="imgVeiculos">
                                 <h2>Maverick Híbrido</h2>
                             </div>
-                    </div>
+                        </div>
                 </div>
             </div>
 
@@ -170,7 +170,7 @@
                     <option value="" hidden>Selecione uma opção*...</option>
                     <option value="">Problemas com alguma funcionalidade do site</option>
                     <option value="">Problemas com o Chat</option>
-                    <option value="">Problemas com o Suporte</option>
+                    <option value="">Problemas de Acessibilidade</option>
                     <option value="">Problemas com o Suporte</option>
                 </select>
                 <h2>Digite sua mensagem:</h2>
