--- a/veiculos/genRanger/genRanger.html
+++ b/veiculos/genRanger/genRanger.html
@@ -7,10 +7,9 @@
     <link rel="stylesheet" href="../css/body.css">
     <link rel="stylesheet" href="../css/header.css">
     <link rel="stylesheet" href="../css/footer.css">
-    <script src="genRanger.js" defer></script>
     <script src="https://kit.fontawesome.com/995dcfb715.js" crossorigin="anonymous"></script>
-    <script src="../script/script.js" defer></script>
     <link rel="shortcut icon" href="../../imgs/inicial/faviconFord.webp" type="image/x-icon">
+    <script src="../script/script.js" defer></script>
 </head>
 <header>
     <div id="divHeader">
@@ -24,10 +23,27 @@
                         <button class="botoesVeiculos">Picapes</button>
                         <button class="botoesVeiculos">Elétricos</button>
                         <button class="botoesVeiculos">Performance</button>
-                        <button class="botoesVeiculos">Comercial</button>
-                        
+                        <button class="botoesVeiculos">Comercial</button>  
                     </div>
-                    <div id="divVeiculos" >
+
+                        <div id="divSuvs" class="divVeiculos">
+                            <div class="divCadaItem">
+                                <img src="https://www.ford.com.br/content/dam/Ford/website-assets/latam/br/nameplate/2024/nova-territory/showroom/fbr-territory-showroom.png.dam.full.high.png/1693228444884.png" alt="" class="imgVeiculos">
+                                <h2>Novo Territory</h2>
+                            </div>
+
+                            <div class="divCadaItem">
+                                <img src="https://www.ford.com.br/content/dam/Ford/website-assets/latam/br/nameplate/2023/bronco-sport/showroom/fbr-showroom-bronco.jpg.dam.full.high.jpg/1690303977561.jpg" alt="" class="imgVeiculos">
+                                <h2>Bronco Sport</h2>
+                            </div>
+
+                            <div class="divCadaItem">
+                                <img src="https://www.ford.com.br/content/dam/Ford/website-assets/latam/br/nameplate/2023/mustang-mach-e/showroom/fbr-showroom-mustang-mach-e.jpg.dam.full.high.jpg/1697465325962.jpg" alt="" class="imgVeiculos">
+                                <h2>Mustang Mach-E</h2>
+                            </div>
+                        </div>
+
+                        <div id="divPicapes" class="divVeiculos">
                             <div class="divCadaItem">
                                 <img src="https://www.ford.com.br/content/dam/Ford/website-assets/latam/br/nameplate/2024/nova-ranger/showroom/fbr-showroom-ranger-p703-v2.png.dam.full.high.png/1691681133806.png" alt="" class="imgVeiculos">
                                 <h2>Nova Geração Ranger</h2>
@@ -47,7 +63,73 @@
                                 <img src="https://www.ford.com.br/content/dam/Ford/website-assets/latam/br/nameplate/2024/maverick/models/hybrid/fbr-showroom-maverick%20hibrida.jpg.dam.full.high.jpg/1712867691940.jpg" alt="" class="imgVeiculos">
                                 <h2>Maverick Híbrido</h2>
                             </div>
-                    </div>
+                        </div>
+
+
+                        <div id="divEletricos" class="divVeiculos">
+                            <div class="divCadaItem">
+                                <img src="https://www.ford.com.br/content/dam/Ford/website-assets/latam/br/nameplate/2023/maverick/models/lariat-hybrid/showroom/fbr-showroom-maverick-hibrida.jpg.dam.full.high.jpg/1695245564147.jpg" alt="" class="imgVeiculos">
+                                <h2>Maverick Hybrid</h2>
+                            </div>
+
+                            <div class="divCadaItem">
+                                <img src="https://www.ford.com.br/content/dam/Ford/website-assets/latam/br/nameplate/2023/mustang-mach-e/showroom/fbr-showroom-mustang-mach-e.jpg.dam.full.high.jpg/1697465325962.jpg" alt="" class="imgVeiculos">
+                                <h2>Mustang Mach-E
+                                </h2>
+                            </div>
+
+                            <div class="divCadaItem">
+                                <img src="https://www.ford.com.br/content/dam/Ford/website-assets/latam/br/nameplate/2024/e-transit/chassi/showroom/fbr-showroom-e-transit-chassi.jpg.dam.full.high.jpg/1713654598785.jpg" alt="" class="imgVeiculos">
+                                <h2>E-Transit Chassi</h2>
+                            </div>
+
+                            <div class="divCadaItem">
+                                <img src="https://www.ford.com.br/content/dam/Ford/website-assets/latam/br/nameplate/2024/e-transit/furgao/showroom/fbr-showroom-e-transit-furgao.jpg.dam.full.high.jpg/1713654651990.jpg" alt="" class="imgVeiculos">
+                                <h2>E-Transit Furgão</h2>
+                            </div>
+                        </div>
+
+
+                        <div id="divPerformance" class="divVeiculos">
+                            <div class="divCadaItem">
+                                <img src="https://www.ford.com.br/content/dam/Ford/website-assets/latam/br/nameplate/2024/mustang/showroom/fbr-showroom-mustang-gt.jpg.dam.full.high.jpg/1711468567641.jpg" alt="" class="imgVeiculos">
+                                <h2>Mustang GT</h2>
+                            </div>
+
+                            <div class="divCadaItem">
+                                <img src="https://www.ford.com.br/content/dam/Ford/website-assets/latam/br/nameplate/2023/mustang-mach-e/showroom/fbr-showroom-mustang-mach-e.jpg.dam.full.high.jpg/1697465325962.jpg" alt="" class="imgVeiculos">
+                                <h2>Mustang Mach-E</h2>
+                            </div>
+
+                            <div class="divCadaItem">
+                                <img src="https://www.ford.com.br/content/dam/Ford/website-assets/latam/br/nameplate/2024/ranger-raptor/showroom/fbr-showroom-ranger-raptor.jpg.dam.full.high.jpg/1700832163448.jpg" alt="" class="imgVeiculos">
+                                <h2>Ranger Raptor</h2>
+                            </div>
+                        </div>
+
+                        <div id="divComercial" class="divVeiculos">
+                            <div class="divCadaItem">
+                                <img src="https://www.ford.com.br/content/dam/Ford/website-assets/latam/br/nameplate/2023/transit-minibus/showroom/fbr-showroom-transit-minibus.jpg.dam.full.high.jpg/1690303967271.jpg" alt="" class="imgVeiculos">
+                                <h2>Transit Minibus</h2>
+                            </div>
+
+                            <div class="divCadaItem">
+                                <img src="https://www.ford.com.br/content/dam/Ford/website-assets/latam/br/nameplate/2023/transit-furgao/showroom/fbr-showroom-transit-furgao.jpg.dam.full.high.jpg/1690303970405.jpg" alt="" class="imgVeiculos">
+                                <h2>Transit Furgão</h2>
+                            </div>
+
+                            <div class="divCadaItem">
+                                <img src="https://www.ford.com.br/content/dam/Ford/website-assets/latam/br/nameplate/2024/e-transit/furgao/showroom/fbr-showroom-e-transit-furgao.jpg.dam.full.high.jpg/1713654651990.jpg" alt="" class="imgVeiculos">
+                                <h2>E-Transit Furgão</h2>
+                            </div>
+
+                            <div class="divCadaItem">
+                                <img src="https://www.ford.com.br/content/dam/Ford/website-assets/latam/br/nameplate/2024/transit-chassi/showroom/fbr-showroom-transit-chassi.png.dam.full.high.png/1694008075359.png" alt="" class="imgVeiculos">
+                                <h2>Transit Chassi</h2>
+                            </div>
+                            
+                        </div>
+
                 </div>
             </div>
 
@@ -89,13 +171,15 @@
 <body>
     <div id="divSlider">
         <img src="imgs/novaGen.jpg" alt="" id="imgSlider">
+
         <div id="divLocalizarConcessionaria">
             <i class="fa-solid fa-location-dot fa-xl" id="localizar"></i>
         </div>
+
         <div id="divBotoesSlider">
-            <button class="botoesSlider"><</button>
+            <button class="botoesSlider"  id="botaoAnterior"><</button>
             <h2 id="posicaoImg">1/5</h2>
-            <button class="botoesSlider">></button>
+            <button class="botoesSlider" id="botaoProximo">></button>
         </div>
         <div id="infoSlider">
             <h1>Nova Geração Ranger</h1>
@@ -103,6 +187,9 @@
         </div>
     </div>
 
+    <div id="divIframeMaps">
+        <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d62940.78769399083!2d-35.78523463938763!3d-9.612548611210952!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x70145978d696c55%3A0x75ba0b570478f8b0!2sFord%20Gama!5e0!3m2!1spt-BR!2sbr!4v1718143513282!5m2!1spt-BR!2sbr" class="iframeMaps"></iframe>
+    </div>
     <h1 id="principaisCaracteristicas">PRINCIPAIS CARACTERÍSTICAS</h1>
 
     <div id="infoVeiculo">
