melhoria na divVeiculos

--- a/veiculos/genRanger/genRanger.html
+++ b/veiculos/genRanger/genRanger.html
@@ -19,14 +19,14 @@
                 <button class="botoesHeader">Veículos</button>
                 <div class="dropdownVeiculos">
                     <div id="dropdownBotoes">
-                        <button class="botoesVeiculos">SUV's</button>
-                        <button class="botoesVeiculos">Picapes</button>
-                        <button class="botoesVeiculos">Elétricos</button>
-                        <button class="botoesVeiculos">Performance</button>
-                        <button class="botoesVeiculos">Comercial</button>  
+                        <button class="botoesVeiculos" id="botaoSuv">SUV's</button>
+                        <button class="botoesVeiculos" id="botaoPicapes">Picapes</button>
+                        <button class="botoesVeiculos" id="botaoEletricos">Elétricos</button>
+                        <button class="botoesVeiculos" id="botaoPerformance">Performance</button>
+                        <button class="botoesVeiculos" id="botaoComercial">Comercial</button>  
                     </div>
 
-                        <div id="divSuvs" class="divVeiculos">
+                        <div id="divSuv" class="divVeiculos">
                             <div class="divCadaItem">
                                 <img src="https://www.ford.com.br/content/dam/Ford/website-assets/latam/br/nameplate/2024/nova-territory/showroom/fbr-territory-showroom.png.dam.full.high.png/1693228444884.png" alt="" class="imgVeiculos">
                                 <h2>Novo Territory</h2>
@@ -137,9 +137,8 @@
                 <button class="botoesHeader">Suporte & Serviços</button>
                 <div class="dropdownSuporteServicos">
                     <div id="dropdownBotoesSuporteServicos">
-                        <button class="botoesSuporteServicos">Assistência 24hs</button>
-                        <button class="botoesSuporteServicos">Tabela Fipe</button>
-                        <button class="botoesSuporteServicos">Relatar um Problema / FeedBack</button>
+                        <a href="../../assistencia24hs/assistencia.html"><button class="botoesSuporteServicos">Assistência 24hs</button></a>
+                        <a href="../../tabelaFipe/fipe.html"><button class="botoesSuporteServicos">Tabela Fipe</button></a>
                     </div>
                 </div>
             </div>
