--- a/home.html
+++ b/home.html
@@ -20,17 +20,33 @@
                 <button class="botoesHeader">Veículos</button>
                 <div class="dropdownVeiculos">
                     <div id="dropdownBotoes">
-                        <button class="botoesVeiculos">SUV's</button>
-                        <button class="botoesVeiculos">Picapes</button>
-                        <button class="botoesVeiculos">Elétricos</button>
-                        <button class="botoesVeiculos">Performance</button>
-                        <button class="botoesVeiculos">Comercial</button>
-                        
+                        <button class="botoesVeiculos" id="botaoSuv">SUV's</button>
+                        <button class="botoesVeiculos" id="botaoPicapes">Picapes</button>
+                        <button class="botoesVeiculos" id="botaoEletricos">Elétricos</button>
+                        <button class="botoesVeiculos" id="botaoPerformance">Performance</button>
+                        <button class="botoesVeiculos" id="botaoComercial">Comercial</button>  
                     </div>
-                        <div id="divVeiculos" >
+
+                        <div id="divSuv" class="divVeiculos">
                             <div class="divCadaItem">
-                                <a href="veiculos/genRanger/genRanger.html">
-                                <img src="https://www.ford.com.br/content/dam/Ford/website-assets/latam/br/nameplate/2024/nova-ranger/showroom/fbr-showroom-ranger-p703-v2.png.dam.full.high.png/1691681133806.png" alt="" class="imgVeiculos"></a>
+                                <img src="https://www.ford.com.br/content/dam/Ford/website-assets/latam/br/nameplate/2024/nova-territory/showroom/fbr-territory-showroom.png.dam.full.high.png/1693228444884.png" alt="" class="imgVeiculos">
+                                <h2>Novo Territory</h2>
+                            </div>
+
+                            <div class="divCadaItem">
+                                <img src="https://www.ford.com.br/content/dam/Ford/website-assets/latam/br/nameplate/2023/bronco-sport/showroom/fbr-showroom-bronco.jpg.dam.full.high.jpg/1690303977561.jpg" alt="" class="imgVeiculos">
+                                <h2>Bronco Sport</h2>
+                            </div>
+
+                            <div class="divCadaItem">
+                                <img src="https://www.ford.com.br/content/dam/Ford/website-assets/latam/br/nameplate/2023/mustang-mach-e/showroom/fbr-showroom-mustang-mach-e.jpg.dam.full.high.jpg/1697465325962.jpg" alt="" class="imgVeiculos">
+                                <h2>Mustang Mach-E</h2>
+                            </div>
+                        </div>
+
+                        <div id="divPicapes" class="divVeiculos">
+                            <div class="divCadaItem">
+                                <img src="https://www.ford.com.br/content/dam/Ford/website-assets/latam/br/nameplate/2024/nova-ranger/showroom/fbr-showroom-ranger-p703-v2.png.dam.full.high.png/1691681133806.png" alt="" class="imgVeiculos">
                                 <h2>Nova Geração Ranger</h2>
                             </div>
 
@@ -48,6 +64,71 @@
                                 <img src="https://www.ford.com.br/content/dam/Ford/website-assets/latam/br/nameplate/2024/maverick/models/hybrid/fbr-showroom-maverick%20hibrida.jpg.dam.full.high.jpg/1712867691940.jpg" alt="" class="imgVeiculos">
                                 <h2>Maverick Híbrido</h2>
                             </div>
+                        </div>
+
+
+                        <div id="divEletricos" class="divVeiculos">
+                            <div class="divCadaItem">
+                                <img src="https://www.ford.com.br/content/dam/Ford/website-assets/latam/br/nameplate/2023/maverick/models/lariat-hybrid/showroom/fbr-showroom-maverick-hibrida.jpg.dam.full.high.jpg/1695245564147.jpg" alt="" class="imgVeiculos">
+                                <h2>Maverick Hybrid</h2>
+                            </div>
+
+                            <div class="divCadaItem">
+                                <img src="https://www.ford.com.br/content/dam/Ford/website-assets/latam/br/nameplate/2023/mustang-mach-e/showroom/fbr-showroom-mustang-mach-e.jpg.dam.full.high.jpg/1697465325962.jpg" alt="" class="imgVeiculos">
+                                <h2>Mustang Mach-E
+                                </h2>
+                            </div>
+
+                            <div class="divCadaItem">
+                                <img src="https://www.ford.com.br/content/dam/Ford/website-assets/latam/br/nameplate/2024/e-transit/chassi/showroom/fbr-showroom-e-transit-chassi.jpg.dam.full.high.jpg/1713654598785.jpg" alt="" class="imgVeiculos">
+                                <h2>E-Transit Chassi</h2>
+                            </div>
+
+                            <div class="divCadaItem">
+                                <img src="https://www.ford.com.br/content/dam/Ford/website-assets/latam/br/nameplate/2024/e-transit/furgao/showroom/fbr-showroom-e-transit-furgao.jpg.dam.full.high.jpg/1713654651990.jpg" alt="" class="imgVeiculos">
+                                <h2>E-Transit Furgão</h2>
+                            </div>
+                        </div>
+
+
+                        <div id="divPerformance" class="divVeiculos">
+                            <div class="divCadaItem">
+                                <img src="https://www.ford.com.br/content/dam/Ford/website-assets/latam/br/nameplate/2024/mustang/showroom/fbr-showroom-mustang-gt.jpg.dam.full.high.jpg/1711468567641.jpg" alt="" class="imgVeiculos">
+                                <h2>Mustang GT</h2>
+                            </div>
+
+                            <div class="divCadaItem">
+                                <img src="https://www.ford.com.br/content/dam/Ford/website-assets/latam/br/nameplate/2023/mustang-mach-e/showroom/fbr-showroom-mustang-mach-e.jpg.dam.full.high.jpg/1697465325962.jpg" alt="" class="imgVeiculos">
+                                <h2>Mustang Mach-E</h2>
+                            </div>
+
+                            <div class="divCadaItem">
+                                <img src="https://www.ford.com.br/content/dam/Ford/website-assets/latam/br/nameplate/2024/ranger-raptor/showroom/fbr-showroom-ranger-raptor.jpg.dam.full.high.jpg/1700832163448.jpg" alt="" class="imgVeiculos">
+                                <h2>Ranger Raptor</h2>
+                            </div>
+                        </div>
+
+                        <div id="divComercial" class="divVeiculos">
+                            <div class="divCadaItem">
+                                <img src="https://www.ford.com.br/content/dam/Ford/website-assets/latam/br/nameplate/2023/transit-minibus/showroom/fbr-showroom-transit-minibus.jpg.dam.full.high.jpg/1690303967271.jpg" alt="" class="imgVeiculos">
+                                <h2>Transit Minibus</h2>
+                            </div>
+
+                            <div class="divCadaItem">
+                                <img src="https://www.ford.com.br/content/dam/Ford/website-assets/latam/br/nameplate/2023/transit-furgao/showroom/fbr-showroom-transit-furgao.jpg.dam.full.high.jpg/1690303970405.jpg" alt="" class="imgVeiculos">
+                                <h2>Transit Furgão</h2>
+                            </div>
+
+                            <div class="divCadaItem">
+                                <img src="https://www.ford.com.br/content/dam/Ford/website-assets/latam/br/nameplate/2024/e-transit/furgao/showroom/fbr-showroom-e-transit-furgao.jpg.dam.full.high.jpg/1713654651990.jpg" alt="" class="imgVeiculos">
+                                <h2>E-Transit Furgão</h2>
+                            </div>
+
+                            <div class="divCadaItem">
+                                <img src="https://www.ford.com.br/content/dam/Ford/website-assets/latam/br/nameplate/2024/transit-chassi/showroom/fbr-showroom-transit-chassi.png.dam.full.high.png/1694008075359.png" alt="" class="imgVeiculos">
+                                <h2>Transit Chassi</h2>
+                            </div>
+                            
                         </div>
                 </div>
             </div>
