site veiculo1 feito

--- a/veiculos/genRanger/genRanger.html
+++ b/veiculos/genRanger/genRanger.html
@@ -157,8 +157,8 @@
                 <h3 id="usuarioLogado"></h3>
                 <div class="dropdownLoginAll">
                     <div id="dropdownBotoesLogin">
-                        <a href="login/login.html"><button class="botoesLogin">Log-in</button></a>
-                        <a href="cadastro/pagina_login.html"><button class="botoesLogin">Cadastrar-se</button></a>
+                        <a href="../../login/login.html"><button class="botoesLogin">Log-in</button></a>
+                        <a href="../../cadastro/pagina_login.html"><button class="botoesLogin">Cadastrar-se</button></a>
                     </div>
                 </div>
             </div>
