evento das cores

--- a/veiculos/genRanger/genRanger.html
+++ b/veiculos/genRanger/genRanger.html
@@ -229,10 +229,10 @@
         <img src="https://www.ford.com.br/content/dam/Ford/website-assets/latam/br/nameplate/2024/nova-ranger/overview/colorizer/limited/colorizer/branco-artico/fbr-nova-ranger-limited-colorizer-branco-artico.jpg.dam.full.high.jpg/1687393695829.jpg" id="imgCorVeiculo">
 
         <div id="coresDisponiveis">
-            <img src="https://www.ford.com.br/content/dam/Ford/website-assets/latam/br/nameplate/2024/nova-ranger/overview/colorizer/limited/colorizer/branco-artico/btn-branco-artico.png.dam.full.high.png/1687393695793.png" alt="">
-            <img src="https://www.ford.com.br/content/dam/Ford/website-assets/latam/br/nameplate/2024/nova-ranger/overview/colorizer/limited/colorizer/vermelho-bari/btn-vermelho-bari.jpg.dam.full.high.jpg/1687393699743.jpg" alt="">
-            <img src="https://www.ford.com.br/content/dam/Ford/website-assets/latam/br/nameplate/2024/nova-ranger/overview/colorizer/limited/colorizer/laranja-jalapao/btn-laranja-jalapao.png.dam.full.high.png/1687393703767.png" alt="">
-            <img src="https://www.ford.com.br/content/dam/Ford/website-assets/latam/br/nameplate/2024/nova-ranger/overview/colorizer/limited/colorizer/cinza-moscou/btn-cinza-moscou.png.dam.full.high.png/1687393707722.png" alt="">
+            <img src="https://www.ford.com.br/content/dam/Ford/website-assets/latam/br/nameplate/2024/nova-ranger/overview/colorizer/limited/colorizer/branco-artico/btn-branco-artico.png.dam.full.high.png/1687393695793.png" alt="" id="branco">
+            <img src="https://www.ford.com.br/content/dam/Ford/website-assets/latam/br/nameplate/2024/nova-ranger/overview/colorizer/limited/colorizer/vermelho-bari/btn-vermelho-bari.jpg.dam.full.high.jpg/1687393699743.jpg" alt="" id="vermelho">
+            <img src="https://www.ford.com.br/content/dam/Ford/website-assets/latam/br/nameplate/2024/nova-ranger/overview/colorizer/limited/colorizer/laranja-jalapao/btn-laranja-jalapao.png.dam.full.high.png/1687393703767.png" alt="" id="laranja">
+            <img src="https://www.ford.com.br/content/dam/Ford/website-assets/latam/br/nameplate/2024/nova-ranger/overview/colorizer/limited/colorizer/cinza-moscou/btn-cinza-moscou.png.dam.full.high.png/1687393707722.png" alt="" id="cinza">
         </div>
     </div>
 
