--- a/veiculos/genRanger/genRanger.html
+++ b/veiculos/genRanger/genRanger.html
@@ -9,7 +9,7 @@
     <link rel="stylesheet" href="../css/footer.css">
     <script src="https://kit.fontawesome.com/995dcfb715.js" crossorigin="anonymous"></script>
     <link rel="shortcut icon" href="../../imgs/inicial/faviconFord.webp" type="image/x-icon">
-    <script src="../script/script.js" defer></script>
+    <script src="genRanger.js" defer></script>
 </head>
 <header>
     <div id="divHeader">
