--- a/veiculos/territory/territory.html
+++ b/veiculos/territory/territory.html
@@ -3,13 +3,13 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Nova Geração Ranger</title>
+    <title>Territory</title>
     <link rel="stylesheet" href="../css/body.css">
     <link rel="stylesheet" href="../css/header.css">
     <link rel="stylesheet" href="../css/footer.css">
     <script src="https://kit.fontawesome.com/995dcfb715.js" crossorigin="anonymous"></script>
     <link rel="shortcut icon" href="../../imgs/inicial/faviconFord.webp" type="image/x-icon">
-    <script src="../script/script.js" defer></script>
+    <script src="territory.js" defer></script>
 </head>
 <header>
     <div id="divHeader">
@@ -169,7 +169,7 @@
 </header>
 <body>
     <div id="divSlider">
-        <img src="imgs/novaGen.jpg" alt="" id="imgSlider">
+        <img src="imgs/territory.jpg" alt="" id="imgSlider">
 
         <div id="divLocalizarConcessionaria">
             <i class="fa-solid fa-location-dot fa-xl" id="localizar"></i>
@@ -181,8 +181,8 @@
             <button class="botoesSlider" id="botaoProximo">></button>
         </div>
         <div id="infoSlider">
-            <h1>Nova Geração Ranger</h1>
-            <h2>R$234.990</h2>
+            <h1>Novo Territory</h1>
+            <h2>R$209.990</h2>
         </div>
     </div>
 
@@ -195,9 +195,9 @@
         
         <div class="infos">
             <section class="secoesInfo">
-                <h1>Conectividade:</h1>
-                <h3><li>Painel Full Digital de 12,4"</li></h3>
-                <h3><li>Sync 4 de 12"</li></h3>
+                <h1>Tecnologias:</h1>
+                <h3><li>Painel Digital de 12.3”</li></h3>
+                <h3><li>Porta-Malas com função "mãos livres"</li></h3>
             </section>
         </div>
         <div class="linha"></div>
@@ -212,8 +212,8 @@
         <div class="infos">
             <section class="secoesInfo">
                 <h1>Segurança:</h1>
-                <h3><li>Assistente Autônomo de Frenagem</li></h3>
-                <h3><li>Alerta de trafego cruzado</li></h3>
+                <h3><li>BLIS + Tráfego cruzado</li></h3>
+                <h3><li>Câmera 360</li></h3>
             </section>
         </div>
 
@@ -226,12 +226,12 @@
             <h2 id="nomeCor">Branco Artico</h2>
         </div>
 
-        <img src="https://www.ford.com.br/content/dam/Ford/website-assets/latam/br/nameplate/2024/nova-ranger/overview/colorizer/limited/colorizer/branco-artico/fbr-nova-ranger-limited-colorizer-branco-artico.jpg.dam.full.high.jpg/1687393695829.jpg" id="imgCorVeiculo">
+        <img src="https://www.ford.com.br/content/dam/Ford/website-assets/latam/br/nameplate/2024/nova-territory/overview/v2/colorizer/branco-bariloche/fbr-territory-my24-color-03-branco-bariloche.jpg.dam.full.high.jpg/1711983684630.jpg" id="imgCorVeiculo">
 
         <div id="coresDisponiveis">
             <img src="https://www.ford.com.br/content/dam/Ford/website-assets/latam/br/nameplate/2024/nova-ranger/overview/colorizer/limited/colorizer/branco-artico/btn-branco-artico.png.dam.full.high.png/1687393695793.png" alt="" id="branco">
             <img src="https://www.ford.com.br/content/dam/Ford/website-assets/latam/br/nameplate/2024/nova-ranger/overview/colorizer/limited/colorizer/vermelho-bari/btn-vermelho-bari.jpg.dam.full.high.jpg/1687393699743.jpg" alt="" id="vermelho">
-            <img src="https://www.ford.com.br/content/dam/Ford/website-assets/latam/br/nameplate/2024/nova-ranger/overview/colorizer/limited/colorizer/laranja-jalapao/btn-laranja-jalapao.png.dam.full.high.png/1687393703767.png" alt="" id="laranja">
+            <img src="https://www.ford.com.br/content/dam/Ford/website-assets/latam/br/nameplate/2024/nova-territory/overview/v2/colorizer/azul-metalico/btn-azul-metalico.png.dam.full.high.png/1711983675629.png" alt="" id="azul">
             <img src="https://www.ford.com.br/content/dam/Ford/website-assets/latam/br/nameplate/2024/nova-ranger/overview/colorizer/limited/colorizer/cinza-moscou/btn-cinza-moscou.png.dam.full.high.png/1687393707722.png" alt="" id="cinza">
         </div>
     </div>
@@ -242,27 +242,27 @@
 
     <div id="detalhesVeiculos">
         <div class="cadaDetalhe">
-            <img src="https://www.ford.com.br/content/ford/br/pt_br/nova-ranger-content/2024/media-carousels/overview-cards-test-ab/jcr:content/par/mediacarouselitem/image.imgs.full.high.jpg/1694704274482.jpg" alt="">
+            <img src="https://www.ford.com.br/content/ford/br/pt_br/home/suvs-e-crossovers/territory/jcr:content/par/splitter/splitter2/mediacarouselitem_co/image.imgs.full.high.jpg" alt="">
             <h1>DESIGN</h1>
-            <h3>A Nova Geração Ford Ranger apresenta visual externo e interno totalmente novos, materializando o DNA Raça Forte.</h3>
+            <h3>O Novo Territory apresenta visual externo e interno totalmente novos, modernizando o que já era bom.</h3>
         </div>
 
         <div class="cadaDetalhe">
-            <img src="https://www.ford.com.br/content/ford/br/pt_br/nova-ranger-content/2024/media-carousels/overview-cards-test-ab/jcr:content/par/mediacarouselitem_1528869907/image.imgs.full.high.jpg/1694704540467.jpg" alt="">
+            <img src="https://www.ford.com.br/content/ford/br/pt_br/home/suvs-e-crossovers/territory/jcr:content/par/splitter/splitter0/mediacarouselitem_40/image.imgs.full.high.jpg" alt="">
             <h1>PERFORMANCE</h1>
-            <h3>O motor 3.0 V6 de 250cv e 600Nm. da Nova Geração Ford Ranger garante um melhor desempenho e eficiência no consumo de combustível.</h3>
+            <h3>O motor EcoBoost 1.5L de 169 cv do Novo Territory garante um melhor desempenho e eficiência no consumo de combustível.</h3>
         </div>
 
         <div class="cadaDetalhe">
-            <img src="https://www.ford.com.br/content/ford/br/pt_br/nova-ranger-content/2024/media-carousels/overview-cards-test-ab/jcr:content/par/mediacarouselitem_601442681/image.imgs.full.high.jpg/1694704605653.jpg" alt="">
+            <img src="https://www.ford.com.br/content/ford/br/pt_br/home/suvs-e-crossovers/territory/jcr:content/par/splitter/splitter1/mediacarouselitem_11/image.imgs.full.high.jpg" alt="">
             <h1>CONECTIVIDADE</h1>
             <h3>Trazendo mais conforto ao usuário, o Sync deixa tudo mais dinâmico, com integrações com o Waze, Spotify e muitos outros apps.</h3>
         </div>
 
         <div class="cadaDetalhe">
-            <img src="https://www.ford.com.br/content/ford/br/pt_br/nova-ranger-content/2024/media-carousels/overview-cards-test-ab/jcr:content/par/mediacarouselitem_274109040/image.imgs.full.high.jpg/1694704627321.jpg" alt="">
+            <img src="https://www.ford.com.br/content/ford/br/pt_br/home/suvs-e-crossovers/territory/seguranca/jcr:content/par/splitter/splitter1/image/image.imgs.full.high.jpg" alt="">
             <h1>SEGURANÇA</h1>
-            <h3>Com a Nova Geração Ford Ranger asseguramos ao usuários viagens e passeios mais tranquilos.</h3>
+            <h3>Com o Novo Territory asseguramos ao usuários viagens e passeios mais tranquilos.</h3>
         </div>
     </div>
 </body>
