--- a/veiculos/mustangMach/mustangMach.html
+++ b/veiculos/mustangMach/mustangMach.html
@@ -3,13 +3,13 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Nova Geração Ranger</title>
+    <title>Mustang Mach E</title>
     <link rel="stylesheet" href="../css/body.css">
     <link rel="stylesheet" href="../css/header.css">
     <link rel="stylesheet" href="../css/footer.css">
     <script src="https://kit.fontawesome.com/995dcfb715.js" crossorigin="anonymous"></script>
     <link rel="shortcut icon" href="../../imgs/inicial/faviconFord.webp" type="image/x-icon">
-    <script src="../script/script.js" defer></script>
+    <script src="mustangMach.js" defer></script>
 </head>
 <header>
     <div id="divHeader">
@@ -169,7 +169,7 @@
 </header>
 <body>
     <div id="divSlider">
-        <img src="imgs/novaGen.jpg" alt="" id="imgSlider">
+        <img src="imgs/mustangmach.webp" alt="" id="imgSlider">
 
         <div id="divLocalizarConcessionaria">
             <i class="fa-solid fa-location-dot fa-xl" id="localizar"></i>
@@ -181,8 +181,8 @@
             <button class="botoesSlider" id="botaoProximo">></button>
         </div>
         <div id="infoSlider">
-            <h1>Nova Geração Ranger</h1>
-            <h2>R$234.990</h2>
+            <h1>Mustang Mach-E</h1>
+            <h2>R$486.000</h2>
         </div>
     </div>
 
@@ -196,24 +196,24 @@
         <div class="infos">
             <section class="secoesInfo">
                 <h1>Conectividade:</h1>
-                <h3><li>Painel Full Digital de 12,4"</li></h3>
-                <h3><li>Sync 4 de 12"</li></h3>
+                <h3><li>FordPass™ Connect</li></h3>
+                <h3><li>Sync® 4 com Tela multifuncional de 15,5"</li></h3>
             </section>
         </div>
         <div class="linha"></div>
         <div class="infos">
             <section class="secoesInfo">
                 <h1>Performance:</h1>
-                <h3><li>Motor 3.0L V6 de 250cv com 600Nm</li></h3>
-                <h3><li>Transmissão AT de 10 velocidades</li></h3>
+                <h3><li>Tração Integral eAWD</li></h3>
+                <h3><li>0 a 100 km/h em 3,7s</li></h3>
             </section>
         </div>
         <div class="linha"></div>
         <div class="infos">
             <section class="secoesInfo">
                 <h1>Segurança:</h1>
-                <h3><li>Assistente Autônomo de Frenagem</li></h3>
-                <h3><li>Alerta de trafego cruzado</li></h3>
+                <h3><li>Assistente de manobras evasivas</li></h3>
+                <h3><li>Piloto Automático Adaptativo (ACC) com Stop & Go</li></h3>
             </section>
         </div>
 
@@ -223,15 +223,15 @@
         <div id="cabecalhoCores">
             <h1 id="textoCores">Cores</h1>
             <h3 id="disponibilidadeCor">Disponível em</h3>
-            <h2 id="nomeCor">Branco Artico</h2>
+            <h2 id="nomeCor">Branco Nur</h2>
         </div>
 
-        <img src="https://www.ford.com.br/content/dam/Ford/website-assets/latam/br/nameplate/2024/nova-ranger/overview/colorizer/limited/colorizer/branco-artico/fbr-nova-ranger-limited-colorizer-branco-artico.jpg.dam.full.high.jpg/1687393695829.jpg" id="imgCorVeiculo">
+        <img src="https://www.ford.com.br/content/dam/Ford/website-assets/latam/br/nameplate/2023/mustang-mach-e/overview/colorizer/branco-nur/fbr-mustang-mach-e-coloriser-branco-nur.jpg.dam.full.high.jpg/1697465310752.jpg" id="imgCorVeiculo">
 
         <div id="coresDisponiveis">
             <img src="https://www.ford.com.br/content/dam/Ford/website-assets/latam/br/nameplate/2024/nova-ranger/overview/colorizer/limited/colorizer/branco-artico/btn-branco-artico.png.dam.full.high.png/1687393695793.png" alt="" id="branco">
             <img src="https://www.ford.com.br/content/dam/Ford/website-assets/latam/br/nameplate/2024/nova-ranger/overview/colorizer/limited/colorizer/vermelho-bari/btn-vermelho-bari.jpg.dam.full.high.jpg/1687393699743.jpg" alt="" id="vermelho">
-            <img src="https://www.ford.com.br/content/dam/Ford/website-assets/latam/br/nameplate/2024/nova-ranger/overview/colorizer/limited/colorizer/laranja-jalapao/btn-laranja-jalapao.png.dam.full.high.png/1687393703767.png" alt="" id="laranja">
+            <img src="https://www.ford.com.br/content/dam/Ford/website-assets/latam/br/nameplate/2023/mustang-mach-e/overview/colorizer/azul-estoril/btn-azul-estoril.png.dam.full.high.png/1697465309832.png" alt="" id="azul">
             <img src="https://www.ford.com.br/content/dam/Ford/website-assets/latam/br/nameplate/2024/nova-ranger/overview/colorizer/limited/colorizer/cinza-moscou/btn-cinza-moscou.png.dam.full.high.png/1687393707722.png" alt="" id="cinza">
         </div>
     </div>
@@ -242,27 +242,27 @@
 
     <div id="detalhesVeiculos">
         <div class="cadaDetalhe">
-            <img src="https://www.ford.com.br/content/ford/br/pt_br/nova-ranger-content/2024/media-carousels/overview-cards-test-ab/jcr:content/par/mediacarouselitem/image.imgs.full.high.jpg/1694704274482.jpg" alt="">
+            <img src="https://www.ford.com.br/content/dam/Ford/website-assets/latam/br/nameplate/2023/mustang-mach-e/overview/gallery-trigger/overlay/fbr-mustang-mach-e-trigger-motor.jpg" alt="">
             <h1>DESIGN</h1>
-            <h3>A Nova Geração Ford Ranger apresenta visual externo e interno totalmente novos, materializando o DNA Raça Forte.</h3>
+            <h3>O Mustang Mach-E apresenta visual externo e interno totalmente novos, materializando o DNA Raça Forte.</h3>
         </div>
 
         <div class="cadaDetalhe">
-            <img src="https://www.ford.com.br/content/ford/br/pt_br/nova-ranger-content/2024/media-carousels/overview-cards-test-ab/jcr:content/par/mediacarouselitem_1528869907/image.imgs.full.high.jpg/1694704540467.jpg" alt="">
+            <img src="https://www.ford.com.br/content/dam/Ford/website-assets/latam/br/nameplate/2023/mustang-mach-e/overview/gallery-trigger/overlay/fbr-mustang-mach-e-trigger-rodas.jpg" alt="">
             <h1>PERFORMANCE</h1>
             <h3>O motor 3.0 V6 de 250cv e 600Nm. da Nova Geração Ford Ranger garante um melhor desempenho e eficiência no consumo de combustível.</h3>
         </div>
 
         <div class="cadaDetalhe">
-            <img src="https://www.ford.com.br/content/ford/br/pt_br/nova-ranger-content/2024/media-carousels/overview-cards-test-ab/jcr:content/par/mediacarouselitem_601442681/image.imgs.full.high.jpg/1694704605653.jpg" alt="">
+            <img src="https://www.ford.com.br/content/dam/Ford/website-assets/latam/br/nameplate/2023/mustang-mach-e/gallery/overlay/fbr-mustang-mach-e-gal-car-play.jpg" alt="">
             <h1>CONECTIVIDADE</h1>
             <h3>Trazendo mais conforto ao usuário, o Sync deixa tudo mais dinâmico, com integrações com o Waze, Spotify e muitos outros apps.</h3>
         </div>
 
         <div class="cadaDetalhe">
-            <img src="https://www.ford.com.br/content/ford/br/pt_br/nova-ranger-content/2024/media-carousels/overview-cards-test-ab/jcr:content/par/mediacarouselitem_274109040/image.imgs.full.high.jpg/1694704627321.jpg" alt="">
+            <img src="https://www.ford.com.br/content/ford/br/pt_br/home/performance/mustang-mach-e/seguranca/jcr:content/par/splitter/splitter1/image/image.imgs.full.high.jpg/1696345718320.jpg" alt="">
             <h1>SEGURANÇA</h1>
-            <h3>Com a Nova Geração Ford Ranger asseguramos ao usuários viagens e passeios mais tranquilos.</h3>
+            <h3>Com o Mustang Mach-E asseguramos ao usuários viagens e passeios mais tranquilos.</h3>
         </div>
     </div>
 </body>
