Prototipo de login pela sessionStorage.

--- a/home.html
+++ b/home.html
@@ -75,10 +75,10 @@
                 
                 <button class="botoesHeader" id="botaoLogin"><i class="fa-regular fa-circle-user fa-xl"></i></button>
                 <h3 id="usuarioLogado"></h3>
-                <div class="dropdownLoginAll">
+                <div id="id_dropdownLoginAll" class="dropdownLoginAll">
                     <div id="dropdownBotoesLogin">
-                        <a href="login/login.html"><button class="botoesLogin">Log-in</button></a>
-                        <a href="cadastro/pagina_login.html"><button class="botoesLogin">Cadastrar-se</button></a>
+                        <a href="login/login.html"><button class="botoesLogin" id="buttonLogin">Log-in</button></a>
+                        <a href="cadastro/pagina_login.html"><button class="botoesLogin" id="botaoCadastro">Cadastrar-se</button></a>
                     </div>
                 </div>
             </div>
