maverick padrao e hibrido concluidos

--- a/veiculos/maverickHybrid/maverickHybrid.html
+++ b/veiculos/maverickHybrid/maverickHybrid.html
@@ -3,13 +3,13 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Ranger Raptor</title>
+    <title>Maverick Hybrid</title>
     <link rel="stylesheet" href="../css/body.css">
     <link rel="stylesheet" href="../css/header.css">
     <link rel="stylesheet" href="../css/footer.css">
     <script src="https://kit.fontawesome.com/995dcfb715.js" crossorigin="anonymous"></script>
     <link rel="shortcut icon" href="../../imgs/inicial/faviconFord.webp" type="image/x-icon">
-    <script src="rangerRaptor.js" defer></script>
+    <script src="maverick.js" defer></script>
 </head>
 <header>
     <div id="divHeader">
@@ -74,8 +74,7 @@
 
                             <div class="divCadaItem">
                                 <img src="https://www.ford.com.br/content/dam/Ford/website-assets/latam/br/nameplate/2023/mustang-mach-e/showroom/fbr-showroom-mustang-mach-e.jpg.dam.full.high.jpg/1697465325962.jpg" alt="" class="imgVeiculos">
-                                <h2>Mustang Mach-E
-                                </h2>
+                                <h2>Mustang Mach-E</h2>
                             </div>
 
                             <div class="divCadaItem">
@@ -169,7 +168,7 @@
 </header>
 <body>
     <div id="divSlider">
-        <img src="imgs/rangerRaptor.jpg" alt="" id="imgSlider">
+        <img src="imgs/maverick.jpg" alt="" id="imgSlider">
 
         <div id="divLocalizarConcessionaria">
             <i class="fa-solid fa-location-dot fa-xl" id="localizar"></i>
@@ -181,8 +180,8 @@
             <button class="botoesSlider" id="botaoProximo">></button>
         </div>
         <div id="infoSlider">
-            <h1>Ranger Raptor</h1>
-            <h2>R$466.500,00</h2>
+            <h1>Maverick Hybrid</h1>
+            <h2>R$237.200</h2>
         </div>
     </div>
 
@@ -196,24 +195,24 @@
         <div class="infos">
             <section class="secoesInfo">
                 <h1>Conectividade:</h1>
-                <h3><li>Painel Full Digital de 12,4"</li></h3>
-                <h3><li>Sync 4 de 12"</li></h3>
+                <h3><li>FordPass™ Connect</li></h3>
+                <h3><li>Sync com tela multifuncional de 8” </li></h3>
             </section>
         </div>
         <div class="linha"></div>
         <div class="infos">
             <section class="secoesInfo">
                 <h1>Performance:</h1>
-                <h3><li>Motor 3.0L V6 Bi-turbo de 397cv com 583Nm</li></h3>
-                <h3><li>Amortecedores FOX 2.5” Racing</li></h3>
+                <h3><li>Motor 2.0L EcoBoost®</li></h3>
+                <h3><li>Cinco Modos de Condução</li></h3>
             </section>
         </div>
         <div class="linha"></div>
         <div class="infos">
             <section class="secoesInfo">
                 <h1>Segurança:</h1>
-                <h3><li>Sistema de monitoramento de ponto-cego (BLIS)</li></h3>
-                <h3><li>Assistente de permanência e centralização em faixas</li></h3>
+                <h3><li>Controle Automático de Descida</li></h3>
+                <h3><li>Alerta de colisão com Assistente Autônomo de Frenagem</li></h3>
             </section>
         </div>
 
@@ -223,10 +222,10 @@
         <div id="cabecalhoCores">
             <h1 id="textoCores">Cores</h1>
             <h3 id="disponibilidadeCor">Disponível em</h3>
-            <h2 id="nomeCor">Branco Artico</h2>
+            <h2 id="nomeCor">Branco Ártico</h2>
         </div>
 
-        <img src="https://www.ford.com.br/content/dam/Ford/website-assets/latam/br/nameplate/2024/ranger-raptor/colorizer-mayo/colorizer/branco-nevasca/fbr-ranger-raptor-colorizer-preto-asturiafbr-ranger-raptor-colorizer-branco-nevasca.jpg.dam.full.high.jpg/1717518172761.jpg" id="imgCorVeiculo">
+        <img src="https://www.ford.com.br/content/dam/Ford/website-assets/latam/br/nameplate/2024/maverick/colorizer/branco-artico/fbr-maverick-2024-colorizer-branco-artico.jpg.dam.full.high.jpg/1711991745149.jpg" id="imgCorVeiculo">
 
         <div id="coresDisponiveis">
             <img src="https://www.ford.com.br/content/dam/Ford/website-assets/latam/br/nameplate/2024/nova-ranger/overview/colorizer/limited/colorizer/branco-artico/btn-branco-artico.png.dam.full.high.png/1687393695793.png" alt="" id="branco">
@@ -242,27 +241,27 @@
 
     <div id="detalhesVeiculos">
         <div class="cadaDetalhe">
-            <img src="https://www.ford.com.br/content/ford/br/pt_br/ranger-raptor-content/2024/media-carousels/overview-cards/jcr:content/par/mediacarouselitem_62381348/image.imgs.full.high.jpg" alt="">
+            <img src="https://www.ford.com.br/content/ford/br/pt_br/home/picapes/maverick/jcr:content/par/splitter/splitter1/mediacarouselitem/image.imgs.full.high.jpg" alt="">
             <h1>DESIGN</h1>
-            <h3>A Nova Ford Ranger Raptor apresenta visual externo e interno totalmente novos, materializando o DNA Raça Forte.</h3>
+            <h3>O Maverick apresenta visual externo e interno totalmente novos, materializando o DNA Raça Forte.</h3>
         </div>
 
         <div class="cadaDetalhe">
-            <img src="https://www.ford.com.br/content/dam/Ford/website-assets/latam/br/nameplate/2024/ranger-raptor/gallery/overlay/fbr-ranger-raptor-galeria-overlay-amortecedores.jpg" alt="">
+            <img src="https://www.ford.com.br/content/dam/Ford/website-assets/latam/br/nameplate/2024/maverick/overview/gallery/overlay/fbr-galeria-maverick-motor-ecoboost.jpg" alt="">
             <h1>PERFORMANCE</h1>
-            <h3>O motor 3.0 V6 Bi-turbo de 397cv da Nova Ford Ranger Raptor garante um melhor desempenho e eficiência no consumo de combustível.</h3>
+            <h3>O motor 2.0L de 253cv do Maverick garante um melhor desempenho e eficiência no consumo de combustível.</h3>
         </div>
 
         <div class="cadaDetalhe">
-            <img src="https://www.ford.com.br/content/ford/br/pt_br/ranger-raptor-content/2024/media-carousels/overview-cards/jcr:content/par/mediacarouselitem_601442681/image.imgs.full.high.jpg" alt="">
+            <img src="https://www.ford.com.br/content/dam/Ford/website-assets/latam/br/nameplate/maverick/overview/gallery-trigger/overlay/fbr-maverick-trigger-sync-over.jpg" alt="">
             <h1>CONECTIVIDADE</h1>
             <h3>Trazendo mais conforto ao usuário, o Sync deixa tudo mais dinâmico, com integrações com o Waze, Spotify e muitos outros apps.</h3>
         </div>
 
         <div class="cadaDetalhe">
-            <img src="https://www.ford.com.br/content/ford/br/pt_br/ranger-raptor-content/2024/media-carousels/overview-cards/jcr:content/par/mediacarouselitem_274109040/image.imgs.full.high.jpg" alt="">
+            <img src="https://www.ford.com.br/content/ford/br/pt_br/home/picapes/maverick/jcr:content/par/splitter/splitter2/mediacarouselitem/image.imgs.full.high.jpg" alt="">
             <h1>SEGURANÇA</h1>
-            <h3>Com a Nova Ford Ranger Raptor asseguramos ao usuários viagens e passeios mais tranquilos.</h3>
+            <h3>Com o Maverick asseguramos ao usuários viagens e passeios mais tranquilos.</h3>
         </div>
     </div>
 </body>
