--- a/home.html
+++ b/home.html
@@ -61,7 +61,7 @@
                             </div>
 
                             <div class="divCadaItem">
-                                <img src="https://www.ford.com.br/content/dam/Ford/website-assets/latam/br/nameplate/2024/maverick/models/hybrid/fbr-showroom-maverick%20hibrida.jpg.dam.full.high.jpg/1712867691940.jpg" alt="" class="imgVeiculos">
+                                <a href="veiculos/maverickHybrid/maverickHybrid.html"><img src="https://www.ford.com.br/content/dam/Ford/website-assets/latam/br/nameplate/2024/maverick/models/hybrid/fbr-showroom-maverick%20hibrida.jpg.dam.full.high.jpg/1712867691940.jpg" alt="" class="imgVeiculos"></a>
                                 <h2>Maverick Hybrid</h2>
                             </div>
                         </div>
