Adição de 5 carros.

--- a/home.html
+++ b/home.html
@@ -84,7 +84,7 @@
                             </div>
 
                             <div class="divCadaItem">
-                                <img src="https://www.ford.com.br/content/dam/Ford/website-assets/latam/br/nameplate/2024/e-transit/furgao/showroom/fbr-showroom-e-transit-furgao.jpg.dam.full.high.jpg/1713654651990.jpg" alt="" class="imgVeiculos">
+                                <a href="veiculos/e-transit_furgao/e-transitf.html"><img src="https://www.ford.com.br/content/dam/Ford/website-assets/latam/br/nameplate/2024/e-transit/furgao/showroom/fbr-showroom-e-transit-furgao.jpg.dam.full.high.jpg/1713654651990.jpg" alt="" class="imgVeiculos"></a>
                                 <h2>E-Transit Furgão</h2>
                             </div>
                         </div>
@@ -92,7 +92,7 @@
 
                         <div id="divPerformance" class="divVeiculos">
                             <div class="divCadaItem">
-                                <img src="https://www.ford.com.br/content/dam/Ford/website-assets/latam/br/nameplate/2024/mustang/showroom/fbr-showroom-mustang-gt.jpg.dam.full.high.jpg/1711468567641.jpg" alt="" class="imgVeiculos">
+                                <a href="veiculos/mustang gt/mustang_gt.html"><img src="https://www.ford.com.br/content/dam/Ford/website-assets/latam/br/nameplate/2024/mustang/showroom/fbr-showroom-mustang-gt.jpg.dam.full.high.jpg/1711468567641.jpg" alt="" class="imgVeiculos"></a>
                                 <h2>Mustang GT</h2>
                             </div>
 
@@ -109,22 +109,22 @@
 
                         <div id="divComercial" class="divVeiculos">
                             <div class="divCadaItem">
-                                <img src="https://www.ford.com.br/content/dam/Ford/website-assets/latam/br/nameplate/2023/transit-minibus/showroom/fbr-showroom-transit-minibus.jpg.dam.full.high.jpg/1690303967271.jpg" alt="" class="imgVeiculos">
+                                <a href="veiculos/transit minibus/transit_minibus.html"><img src="https://www.ford.com.br/content/dam/Ford/website-assets/latam/br/nameplate/2023/transit-minibus/showroom/fbr-showroom-transit-minibus.jpg.dam.full.high.jpg/1690303967271.jpg" alt="" class="imgVeiculos"></a>
                                 <h2>Transit Minibus</h2>
                             </div>
 
                             <div class="divCadaItem">
-                                <img src="https://www.ford.com.br/content/dam/Ford/website-assets/latam/br/nameplate/2023/transit-furgao/showroom/fbr-showroom-transit-furgao.jpg.dam.full.high.jpg/1690303970405.jpg" alt="" class="imgVeiculos">
+                                <a href="veiculos/transit furgao/transit_furgao.html"><img src="https://www.ford.com.br/content/dam/Ford/website-assets/latam/br/nameplate/2023/transit-furgao/showroom/fbr-showroom-transit-furgao.jpg.dam.full.high.jpg/1690303970405.jpg" alt="" class="imgVeiculos"></a>
                                 <h2>Transit Furgão</h2>
                             </div>
 
                             <div class="divCadaItem">
-                                <img src="https://www.ford.com.br/content/dam/Ford/website-assets/latam/br/nameplate/2024/e-transit/furgao/showroom/fbr-showroom-e-transit-furgao.jpg.dam.full.high.jpg/1713654651990.jpg" alt="" class="imgVeiculos">
+                                <a href="veiculos/e-transit_furgao/e-transitf.html"><img src="https://www.ford.com.br/content/dam/Ford/website-assets/latam/br/nameplate/2024/e-transit/furgao/showroom/fbr-showroom-e-transit-furgao.jpg.dam.full.high.jpg/1713654651990.jpg" alt="" class="imgVeiculos"></a>
                                 <h2>E-Transit Furgão</h2>
                             </div>
 
                             <div class="divCadaItem">
-                                <img src="https://www.ford.com.br/content/dam/Ford/website-assets/latam/br/nameplate/2024/transit-chassi/showroom/fbr-showroom-transit-chassi.png.dam.full.high.png/1694008075359.png" alt="" class="imgVeiculos">
+                                <a href="veiculos/transit chassi/transit_chassi.html"><img src="https://www.ford.com.br/content/dam/Ford/website-assets/latam/br/nameplate/2024/transit-chassi/showroom/fbr-showroom-transit-chassi.png.dam.full.high.png/1694008075359.png" alt="" class="imgVeiculos"></a>
                                 <h2>Transit Chassi</h2>
                             </div>
                             
